# canister-sdk

./: .gitignore  Cargo.toml  build.sh  dfx.json
cycles-withdraw/: Cargo.toml
cycles-withdraw/src/: api.rs  lib.rs  main.rs
ic-canister/ic-canister-macros/: Cargo.toml
ic-canister/ic-canister-macros/src/: api.rs
ic-canister/ic-canister/src/: idl.rs  lib.rs
ic-canister/tests/canister_a/src/: lib.rs
ic-canister/tests/canister_b/src/: lib.rs
ic-factory/: build.rs
ic-factory/src/: api.rs  core.rs  cycles-withdraw.wasm  lib.rs  withdraw.rs
ic-factory/src/types/: canister.rs
ic-helpers/: Cargo.toml
ic-helpers/src/factory/: api.rs
ic-helpers/src/management/: canister.rs
scripts/: build.sh
tests/canister-a/: Cargo.toml
tests/canister-b/: Cargo.toml
tests/canister-c/: Cargo.toml
tests/proto-factory/: Cargo.toml  build.rs
tests/proto-factory/src/: api.rs  main.rs
