[package]
name = "cycles-withdraw"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
candid = "0.7"
ic-cdk = "0.5"
ic-cdk-macros = "0.5"
serde = "1.0"

ic-canister = { path = "../ic-canister/ic-canister" }
ic-canister-macros = { path = "../ic-canister/ic-canister-macros" }
ic-storage = { path = "../ic-storage" }
